<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidProject</string>
    <string name="action_settings">Settings</string>
    <string name="button_start">Start</string>
    <string name="button_continue">Continue</string>
    <string name="button_levels">Levels</string>
    <string name="button_level1">Level 1</string>
    <string name="button_level2">Level 2</string>
    <string name="button_level3">Level 3</string>
    <string name="button_exit">Exit</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_win">You win!!!</string>
    <string name="label_lose">You lose!!! Try again!</string>
    <string name="button_replay">Replay</string>
    <string name="button_gotoMenu">Menu</string>
    <string name="button_nextLevel">Next level</string>
    <string name="title_activity_levels">LevelsActivity</string>

</resources>
