<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".menuActivity"
    android:background="@drawable/menu_background"
    >

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/button_level1"
            android:id="@+id/button_level1"
            style="@style/menu_button"
            android:onClick="button_level1_clicked"/>

        <Button
            android:text="@string/button_level2"
            android:id="@+id/button_level2"
            style="@style/menu_button"
            android:onClick="button_level2_clicked"/>

        <Button
            android:text="@string/button_level3"
            android:id="@+id/button_level3"
            style="@style/menu_button"
            android:onClick="button_level3_clicked"/>

    </LinearLayout>

</FrameLayout>

